# fast-api-source-base

./: .flake8  .gitignore  .pylintrc  README.md  docker-compose.yml  index.py  pyproject.toml  pytest.ini  test.db
.github/workflows/: code_quality.yml  unit_test.yml
src/: main.py
src/core/: container.py
src/databases/: mysql.py
src/models/: user_model.py
src/modules/: app_container.py
src/modules/post/: post_container.py
src/modules/post/controllers/: post_controller.py
src/modules/post/repositories/: post_repository.py
src/modules/post/services/: post_service.py
src/modules/user/: user_container.py
src/modules/user/controllers/: user_controller.py
src/modules/user/dto/requests/: user_request.py
src/modules/user/repositories/: user_repository.py
src/modules/user/services/: user_service.py
src/repositories/: base_repository.py  user_repository.py
src/tests/: conftest.py
src/tests/containers/: mysql_container.py
src/tests/core/: async_base.py  test_base.py
src/tests/integration/: test_user_api.py
src/tests/modules/user/services/: test_user.py  test_user_dup.py
src/tests/unit/: test_setup_database.py
src/utils/: helper.py
